[project]
name = "pmapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "botocore>1.13",
    "packaging>=25.0",
    "pydot>=4.0.1",
    "python-dateutil>=2.9.0.post0",
]

[project.scripts]
pmapper = "principalmapper.__main__:main"
